[tool.poetry]
name = "explore-flask"
version = "0.1.0"
description = ""
authors = ["Travis Aucoin <travisdevaucoin@gmail.com>"]
readme = "README.md"
packages = [{include = "explore_flask"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
connexion = {version = "2.14.1", extras = ["swagger-ui"]}


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

